ci: ``ansys/actions/check-vulnerabilities`` to CI-CD (#3505)
* add: ``ansys/actions/check-vulnerabilities`` action to cicd

* chore: adding changelog file 3505.maintenance.md [dependabot-skip]

* fix: ignoring some bandit warnings and adding reasons

* Update .github/workflows/ci.yml

Co-authored-by: German <28149841+germa89@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Roberto Pastor Muela <37798125+RobPasMue@users.noreply.github.com>

* Update .github/workflows/ci.yml

---------

Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>
Co-authored-by: German <28149841+germa89@users.noreply.github.com>
Co-authored-by: Roberto Pastor Muela <37798125+RobPasMue@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,17 @@ jobs:
           python -c "from pyvista.plotting import system_supports_plotting; print('System support plotting ' + str(system_supports_plotting()))"
 
 
+  check-vulnerabilities:
+    name: "Check library vulnerabilities"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ansys/actions/check-vulnerabilities@v8
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+          python-package-name: ${{ env.PACKAGE_NAME }}
+          dev-mode: ${{ github.ref != 'refs/heads/main' }}
+
   docs-build:
     name: "Build documentation"
     runs-on: ubuntu-latest
